tenzir/bats/data/reference/every/test_every_errors/step_04.ref
error: expected argument of type `duration`, but got `pipeline`
 --> <input>:1:7
  |
1 | every { version }
  |       ^^^^^^^^^^^ 
  |
  = usage: every interval:duration { … }
  = docs: https://docs.tenzir.com/reference/operators/every

error: expected additional positional argument `{ … }`
 --> <input>:1:1
  |
1 | every { version }
  | ^^^^^ 
  |
  = usage: every interval:duration { … }
  = docs: https://docs.tenzir.com/reference/operators/every